--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <p class="footer-text">-By Vijayasimha Tammineni</p>
+    </div>
 
     <script>
         const apiKey = "c8d1599cbeb3bd3e394a0bfc68a22977";
